--- a/web_flask/templates/register.html
+++ b/web_flask/templates/register.html
@@ -1,24 +1,37 @@
-<!-- templates/register.html -->
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block content %}
-  <h2>Register</h2>
-  <form method="post" action="{{ url_for('register') }}">
-    {{ form.hidden_tag() }}
-    <div class="form-group">
-      {{ form.username.label }}
-      {{ form.username(class="form-control") }}
-    </div>
-    <div class="form-group">
-      {{ form.email.label }}
-      {{ form.email(class="form-control") }}
-    </div>
-    <div class="form-group">
-      {{ form.password.label }}
-      {{ form.password(class="form-control") }}
-    </div>
-    <div class="form-group">
-      {{ form.submit(class="btn btn-primary") }}
-    </div>
-  </form>
+    <h1>Register</h1>
+    <form action="" method="post">
+        {{ form.hidden_tag() }}
+        <p>
+            {{ form.username.label }}<br>
+            {{ form.username(size=32) }}<br>
+            {% for error in form.username.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.email.label }}<br>
+            {{ form.email(size=64) }}<br>
+            {% for error in form.email.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.password.label }}<br>
+            {{ form.password(size=32) }}<br>
+            {% for error in form.password.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.password2.label }}<br>
+            {{ form.password2(size=32) }}<br>
+            {% for error in form.password2.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>{{ form.submit() }}</p>
+    </form>
 {% endblock %}
