--- a/web_flask/templates/register.html
+++ b/web_flask/templates/register.html
@@ -1,37 +1,41 @@
-{% extends "base.html" %}
-
-{% block content %}
-    <h1>Register</h1>
+{% extends "base.html" %} {% block content %}
+<div class="container">
+  <div class="title">Register</div>
+  <div class="content">
     <form action="" method="post">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.username.label }}<br>
-            {{ form.username(size=32) }}<br>
-            {% for error in form.username.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.email.label }}<br>
-            {{ form.email(size=64) }}<br>
-            {% for error in form.email.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.password.label }}<br>
-            {{ form.password(size=32) }}<br>
-            {% for error in form.password.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.password2.label }}<br>
-            {{ form.password2(size=32) }}<br>
-            {% for error in form.password2.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.submit() }}</p>
+      {{ form.hidden_tag() }}
+      <div class="user-details">
+        <div class="input-box">
+          <span class="details">{{ form.username.label }}<br /></span>
+          {{ form.username(size=32) }}<br />
+          {% for error in form.username.errors %}
+          <span style="color: red">[{{ error }}]</span>
+          {% endfor %}
+        </div>
+        <div class="input-box">
+          <span class="details">{{ form.email.label }}<br /></span>
+          {{ form.email(size=64) }}<br />
+          {% for error in form.email.errors %}
+          <span style="color: red">[{{ error }}]</span>
+          {% endfor %}
+        </div>
+        <div class="input-box">
+          <span class="details">{{ form.password.label }}<br /></span>
+          {{ form.password(size=32) }}<br />
+          {% for error in form.password.errors %}
+          <span style="color: red">[{{ error }}]</span>
+          {% endfor %}
+        </div>
+        <div class="input-box">
+          <span class="details">{{ form.password2.label }}<br /></span>
+          {{ form.password2(size=32) }}<br />
+          {% for error in form.password2.errors %}
+          <span style="color: red">[{{ error }}]</span>
+          {% endfor %}
+        </div>
+      </div>
+        <div class="register-btn">{{ form.submit() }}</div>
     </form>
+  </div>
+</div>
 {% endblock %}
