--- a/web_flask/templates/base.html
+++ b/web_flask/templates/base.html
@@ -1,30 +1,83 @@
-<!-- templates/base.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <!-- Your head content here -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>DataVisualizer</title>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='styles/home.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='styles/register.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='styles/login.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='styles/inside.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='styles/nav.css') }}"
+    />
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="../static/scripts/upload.js"></script>
+    <script type="text/javascript" src="../static/scripts/menu.js"></script>
   </head>
   <body>
-    <div>
-      DV:
-      {% if current_user.is_anonymous %}
-      <a href="{{ url_for('register') }}">register</a>
-      <a href="{{ url_for('login') }}">Login</a>
-      {% else %}
-      <a href="{{ url_for('home') }}">home</a>
-      <a href="{{ url_for('logout') }}">logout</a>
-      {% endif %}
-    </div>
-    <!-- Flash message placeholder -->
-    {% with messages = get_flashed_messages() %} {% if messages %}
-    <ul class="flashes">
-      {% for message in messages %}
-      <li>{{ message }}</li>
-      {% endfor %}
-    </ul>
-    {% endif %} {% endwith %}
-    <!-- Your body content here -->
+    <header class="header">
+      <nav class="navbar">
+        <div class="logo">
+          <a href="{{ url_for('home') }}"
+            ><img src="../static/resources/logo.png"
+          /></a>
+        </div>
+        <ul class="links">
+          <li><a href="{{ url_for('home') }}">Home</a></li>
+          <li><a href="#">Discover</a></li>
+          <li><a href="#">Offers</a></li>
+          <li><a href="#">Portfolio</a></li>
+        </ul>
+        <div class="buttons">
+          {% if current_user.is_anonymous %}
+          <a href="{{ url_for('login') }}" class="signin">Sign In</a>
+          <a href="{{ url_for('register') }}" class="signup">Sign Up</a>
+          {% else %}
+          <img src="../static/resources/profileIcon.png" class="profile" onclick="toggleMenu()" />
+          <div class="sub-menu-wrap" id="subMenu">
+            <div class="sub-menu">
+              <div class="user-info">
+                <img src="../static/resources/profileIcon.png" />
+                <h2>{{ current_user.username }}</h2>
+              </div>
+              <hr />
 
+              <a href="#" class="sub-menu-link">
+                <img src="../static/resources/profileEditIcon.png" />
+                <p>Edit profile</p>
+                <span>></span>
+              </a>
+              <a href="#" class="sub-menu-link">
+                <img src="../static/resources/settingsIcon.png" />
+                <p>Settings & Privacy</p>
+                <span>></span>
+              </a>
+              <a href="{{ url_for('logout')}}" class="sub-menu-link">
+                <img src="../static/resources/logoutIcon.png" />
+                <p>Logout</p>
+                <span>></span>
+              </a>
+            </div>
+          </div>
+
+          {% endif %}
+        </div>
+      </nav>
+    </header>
     {% block content %}{% endblock %}
   </body>
 </html>
