--- a/web_flask/templates/home.html
+++ b/web_flask/templates/home.html
@@ -1,5 +1,20 @@
-{% extends "base.html" %}
-
-{% block content %}
-<h1> Welcome {{ username}} </h2>
-{% endblock%}
+{% extends "base.html" %} {% block content %}
+<section class="hero-section">
+  <div class="hero">
+    <h2>Easy converting---from data to charts</h2>
+    <p>
+      Transform your data effortlessly! Create stunning visualizations, monitor
+      real-time updates, and collaborate seamlessly. Personalize your experience
+      and dive into advanced analysis tools. Sign up now for a visual
+      exploration like never before!
+    </p>
+    <div class="buttons">
+      <a href="#" class="star">Get started</a>
+      <a href="#" class="try">Try Dv for free</a>
+    </div>
+  </div>
+  <div class="img">
+    <img src="../static/resources/home.png" alt="lmoush png" />
+  </div>
+</section>
+{% endblock %}
