--- a/web_flask/templates/login.html
+++ b/web_flask/templates/login.html
@@ -12,10 +12,8 @@
           <div id="github-api" onclick="loginGithub()">
             <img src="../static/resources/githubIcon.png" class='github-icon'>
           </div>
-          <div id="gSignInWrapper" onclick="startApp()">
-            <img src="../static/resources/googleIcon.png" id="customBtn" class="customGPlusSignIn">
+          <div id="gSignInWrapper">
           </div>
-          <div id="name"></div>
         </div>
         <div style="margin: 10px;">
           {{ form.remember_me() }} {{ form.remember_me.label }}
