--- a/web_flask/templates/base.html
+++ b/web_flask/templates/base.html
@@ -24,14 +24,15 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='styles/nav.css') }}"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="https://apis.google.com/js/api:client.js"></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript" src="../static/scripts/upload.js" defer></script>
     <script type="text/javascript" src="../static/scripts/menu.js" defer></script>
-    <script type="text/javascript" src="../static/scripts/googleApi.js" defer></script>
     <script type="text/javascript" src="../static/scripts/githubApi.js" defer></script>
     <script type="text/javascript" src="../static/scripts/chartApi.js" defer></script>
+    <script type="text/javascript" src="../static/scripts/googleApi.js" defer></script>
   </head>
   <body>
     <header class="header">
