added files history

--- a/web_flask/static/styles/inside.css
+++ b/web_flask/static/styles/inside.css
@@ -1,3 +1,7 @@
+.main-container{
+    display: flex;
+    margin: auto;
+}
 .hero-container {
     display: flex;
     flex-direction: column;
@@ -5,8 +9,7 @@
     background: white;
     height: 640px;
     width: 800px;
-    border-radius: 10px;
-    margin: auto;
+    border-radius: 8px;
 }
 
 #upload-label {
@@ -40,7 +43,21 @@
     font-weight: bold;
 }
 
-
 .btn {
     margin-bottom: 12px;
+}
+
+.history {
+    background: #fff;
+    width: 240px;
+    height: 640px;
+    margin: 0 20px;
+    border-radius: 8px;
+}
+
+.form-select {
+    height: 640px;
+}
+.data-option {
+    padding: 8px 0;
 }
