--- a/web_flask/static/styles/login.css
+++ b/web_flask/static/styles/login.css
@@ -1,9 +1,9 @@
-body {
+.login-page {
+  height: 100%;
   display: flex;
+  justify-content: center;
   align-items: center;
-  flex-direction: column;
 }
-
 .login-title {
   height: 50px;
   width: 100%;
