--- a/web_flask/static/styles/home.css
+++ b/web_flask/static/styles/home.css
@@ -1,4 +1,3 @@
-/* Importing Google font - Open Sans */
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap");
 
 * {
@@ -9,121 +8,56 @@
 }
 
 body {
-  height: 100vh;
+  height: 90vh;
   width: 100%;
-  background: linear-gradient(to bottom, #175d69 23%, #330c43 95%);
+  background-color: rgba(0, 0, 0, 0.750) !important;
 }
-
-
-.hero-section {
+.home-container {
+  height: 100%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
-  height: 95vh;
-  padding: 0 15px;
-  max-width: 1200px;
-  margin: 0 auto;
+  color: white;
 }
 
-.hero-section .hero {
-  max-width: 50%;
-  color: #fff;
+.left-half {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 800px;
+  padding: 20px;
+  margin-left: 42px;
 }
+.left-half h2{
+  font-size: 42px;
+  font-weight: bold;
+  margin-bottom: 24px;
 
-.hero h2 {
-  font-size: 2.5rem;
-  margin-bottom: 20px;
 }
-
-.hero p {
-  font-size: 1.2rem;
-  margin-bottom: 20px;
-  color: #c9c7c7;
+.left-half p{
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: normal;
+  margin-bottom: 24px;
 }
-
-.hero-section .img img {
-  width: 517px;
+.right-half {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  flex: 1;
+  
 }
-
-.hero-section .buttons {
-  margin-top: 40px;
-}
-
-.hero-section .buttons a {
+.left-half .btn {
+  width: 148px;
   text-decoration: none;
-  color: #fff;
-  padding: 12px 24px;
-  border-radius: 0.375rem;
-  font-weight: 600;
-  transition: 0.2s ease;
-  display: inline-block;
+}
+.img {
+  text-align: center;
 }
 
-.hero-section .buttons a:not(:last-child) {
-  margin-right: 15px;
-}
-
-.buttons .join {
-  background-color: #47b2e4;
-}
-
-.hero-section .buttons .learn {
-  border: 1px solid #fff;
-  border-radius: 0.375rem;
-}
-
-.hero-section .buttons a:hover {
-  background-color: #47b2e4;
-}
-
-/* Hamburger menu styles */
-#menu-toggle {
-  display: none;
-}
-
-#hamburger-btn {
-  font-size: 1.8rem;
-  color: #fff;
-  cursor: pointer;
-  display: none;
-  order: 1;
-}
-
-@media screen and (max-width: 1023px) {
-  .navbar .logo a {
-    font-size: 1.5rem;
-  }
-
-  .links {
-    position: fixed;
-    left: -100%;
-    top: 75px;
-    width: 100%;
-    height: 100vh;
-    padding-top: 50px;
-    background: #175d69;
-    flex-direction: column;
-    transition: 0.3s ease;
-  }
-
-  .navbar #menu-toggle:checked ~ .links {
-    left: 0;
-  }
-
-  .navbar #hamburger-btn {
-    display: block;
-  }
-
-  .header .buttons {
-    display: none;
-  }
-
-  .hero-section .hero {
-    max-width: 100%;
-    text-align: center;
-  }
-
-  .hero-section img {
-    display: none;
-  }
+.img img {
+  width: 700px;
+  height: auto;
 }
