--- a/web_flask/static/styles/nav.css
+++ b/web_flask/static/styles/nav.css
@@ -1,15 +1,10 @@
-.header {
+header {
   width: 100%;
 }
 
-.navbar {
-  max-width: 1200px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: relative;
-  margin: 0 auto;
-  padding: 20px 15px;
+.btn a {
+  color: black;
+  text-decoration: none;
 }
 
 .navbar .profile {
@@ -18,23 +13,7 @@
   border-radius: 50%;
   cursor: pointer;
 }
-.navbar .logo img {
-  width: 120px;
-  height: auto;
-  margin-top: -40px;
-  margin-bottom: -50px;
-  border-radius: 50%;
-}
 
-
-nav ul li {
-  display: inline-block;
-  list-style: none;
-}
-
-nav ul li a {
-  text-decoration: none;
-}
 
 .sub-menu-wrap {
   position: absolute;
@@ -43,23 +22,19 @@ nav ul li a {
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.5s;
+  top: 100%;
 }
 
 .sub-menu-wrap.open-menu {
   max-height: 400px;
 }
 
+
 .sub-menu {
   background: #fff;
   padding: 20px;
   margin: 10px;
   border-radius: 4px;
-}
-.navbar .links {
-  display: flex;
-  align-items: center;
-  list-style: none;
-  gap: 16px;
 }
 
 .user-info {
@@ -75,11 +50,10 @@ nav ul li a {
 }
 
 .user-info img {
-  width: 50px;
+  width: 48px;
   border-radius: 50%;
   margin-right: 15px;
 }
-
 
 .sub-menu-link {
   display: flex;
@@ -87,43 +61,11 @@ nav ul li a {
   text-decoration: none;
   margin: 12px 0;
 }
-.navbar .links a:hover {
-  color: #47b2e4;
-}
-.navbar .buttons a {
-  text-decoration: none;
-  color: #525252;
-  font-size: 1rem;
-  transition: 0.2s ease;
-}
-#login {
-  width: 200px;
-  display: flex;
-  justify-content: space-evenly;
-  color: #fff !important;
-}
 
-.navbar .buttons .signin:hover {
-  color: #47b2e4;
-}
-.navbar .buttons .signin {
-  color: #fff;
-}
-.navbar .buttons .signup {
-  color: #fff;
-  border: 1px solid #fff;
-  padding: 10px 20px;
-  border-radius: 0.375rem;
-  text-align: center;
-  transition: 0.2s ease;
-}
-
-.navbar .buttons .signup:hover {
-  background-color: #47b2e4;
-  color: #fff;
-}
 .sub-menu-link p {
   width: 100%;
+  color: black !important;
+  margin-bottom: 0;
 }
 .sub-menu-link img {
   width: 40px;
@@ -132,13 +74,7 @@ nav ul li a {
   padding: 8px;
   margin-right: 15px;
 }
-.navbar .links a {
-  font-weight: 500;
-  text-decoration: none;
-  color: #fff;
-  padding: 10px 0;
-  transition: 0.2s ease;
-}
+
 .sub-menu-link span {
   font-size: 22px;
 }
