--- a/web_flask/templates/register.html
+++ b/web_flask/templates/register.html
@@ -12,27 +12,54 @@
             <div class="content">
             <form action="{{ url_for('register') }}" method="post">
                 {{ form.csrf_token }}
-                <div class="form-floating mb-3 mt-3">
-                {{ form.username(class_="form-control", id="floatingInput", placeholder="Username") }}
-                <label for="floatingInput">Username</label>
+                {% if form.username.errors %}
+                <div class="form-floating  mb-3 mt-3">
+                    {% for error in form.username.errors %}
+                    {{ form.username(class="form-control is-invalid", id="floatingInputInvalid", placeholder="Username") }}
+                    <label for="floatingInputInvalid">{{ error }}</label>
+                    {% endfor %}
                 </div>
-                <div class="form-floating mb-0">
-                {{ form.email(class_="form-control", id="floatingInput", placeholder="name@example.com") }}<br />
+                {% else %}
+                <div class="form-floating mb-3 mt-3">
+                    {{ form.username(class_="form-control", id="floatingInput", placeholder="Username") }}
+                    <label for="floatingInput">Username</label>
+                </div>
+                {% endif %}
+                {% if form.email.errors %}
+                <div class="form-floating mb-3 mt-3">
+                    {% for error in form.email.errors %}
+                    {{ form.email(class="form-control is-invalid", id="floatingInputInvalid", placeholder="name@example.com") }}
+                    <label for="floatingInputInvalid">{{ error }}</label>
+                    {% endfor %}
+                </div>
+                {% else %}
+                <div class="form-floating mb-3">
+                {{ form.email(class_="form-control", id="floatingInput", placeholder="name@example.com") }}
                 <label for="floatingInput">Email address</label>
                 </div>
-                <div class="form-floating mb-3 mt-0">
+                {% endif %}
+                <div class="form-floating mb-3">
                 {{ form.password(class_="form-control", id="floatingPassword", placeholder="Password") }}
                 <label for="floatingPassword">Password</label>
                 </div>
-                <div class="form-floating mb-0">
-                    {{ form.password2(class_="form-control", id="floatingPassword2", placeholder="Password") }}<br />
+                {% if form.password2.errors %}
+                <div class="form-floating mb-3">
+                    {% for error in form.password2.errors %}
+                    {{ form.password2(class="form-control is-invalid", id="floatingPassword2", placeholder="Password") }}
+                    <label for="floatingPassword2">{{ error }}</label>
+                    {% endfor %}
+                </div>
+                {% else %}
+                <div class="form-floating mb-3">
+                    {{ form.password2(class_="form-control", id="floatingPassword2", placeholder="Password") }}
                     <label for="floatingPassword2">Confirm Password</label>
                 </div>
+                {% endif %}
                 {{ form.submit(class="btn btn-secondary") }}
             </form>
             </div>
-            <div>
-                <h4>Already have an account?</4>
+            <div class="have-acc">
+                <h4>Already have an account?</h4>
                 <a href="{{ url_for("login") }}">Sign in</a>
             </div>
         </div>
