--- a/web_flask/static/styles/register.css
+++ b/web_flask/static/styles/register.css
@@ -48,13 +48,21 @@
     width: 430px;
     height: 430px;
   }
-
-  .register-container h4 {
-    font-size: 12px;
-    font-weight: normal;
+  .register-container .have-acc {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-top: 16px;
   }
-  .register-container a {
+  .register-container .have-acc h4{
+    font-size: 12px;
+    font-weight: normal;
+    margin-bottom: 0;
+
+  }
+  .register-container .have-acc a {
+    font-size: 12px;
     color: blue;
     text-decoration: none;
+    margin-left: 4px;
   }
